# Basicpp

./: .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md
doc/: Doxyfile
examples/: basicpp_example.cpp
include/basicpp/: applog.h  basicpp.h  inifile.h
src/: applog.cpp  inifile.cpp
